// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Component matches fluid container 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: 15px;
  padding-left: 15px;
  max-width: 100%;
  width: 100%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
/>
`;

exports[`Container Component matches normal container 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: 15px;
  padding-left: 15px;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    max-width: 540px;
  }
}

@media (min-width:48em) {
  .c0 {
    max-width: 720px;
  }
}

@media (min-width:62em) {
  .c0 {
    max-width: 960px;
  }
}

<div
  class="sc-fznyAO c0"
/>
`;
